syntax = "proto3";

package plugin.v1;

option go_package = "github.com/warp-run/prysm-cli/proto/plugin/v1;pluginv1";

// PluginService is implemented by plugin binaries.
service PluginService {
  rpc GetManifest(GetManifestRequest) returns (GetManifestResponse);
  rpc Execute(ExecuteRequest) returns (ExecuteResponse);
}

// HostService is implemented by the CLI host, called by plugins.
service HostService {
  rpc GetAuthContext(GetAuthContextRequest) returns (GetAuthContextResponse);
  rpc APIRequest(APIRequestRequest) returns (APIRequestResponse);
  rpc GetConfig(GetConfigRequest) returns (GetConfigResponse);
  rpc Log(LogRequest) returns (LogResponse);
  rpc PromptInput(PromptInputRequest) returns (PromptInputResponse);
  rpc PromptConfirm(PromptConfirmRequest) returns (PromptConfirmResponse);
}

// PluginService messages

message GetManifestRequest {}

message GetManifestResponse {
  string name = 1;
  string version = 2;
  string description = 3;
  repeated CommandSpec commands = 4;
}

message CommandSpec {
  string name = 1;
  string short = 2;
  string long = 3;
  repeated CommandSpec subcommands = 4;
}

message ExecuteRequest {
  repeated string args = 1;
  map<string, string> env = 2;
  string working_dir = 3;
  string output_format = 4;
  bool debug = 5;
}

message ExecuteResponse {
  int32 exit_code = 1;
  string error = 2;
  string stdout = 3;
}

// HostService messages

message GetAuthContextRequest {}

message GetAuthContextResponse {
  string token = 1;
  uint64 org_id = 2;
  string org_name = 3;
  uint64 user_id = 4;
  string user_email = 5;
  string api_base_url = 6;
}

message APIRequestRequest {
  string method = 1;
  string endpoint = 2;
  bytes body = 3;
}

message APIRequestResponse {
  int32 status_code = 1;
  bytes body = 2;
}

message GetConfigRequest {}

message GetConfigResponse {
  string api_base_url = 1;
  string derp_url = 2;
  string home_dir = 3;
  string output_format = 4;
}

enum LogLevel {
  LOG_LEVEL_UNSPECIFIED = 0;
  LOG_LEVEL_INFO = 1;
  LOG_LEVEL_SUCCESS = 2;
  LOG_LEVEL_WARNING = 3;
  LOG_LEVEL_ERROR = 4;
  LOG_LEVEL_DEBUG = 5;
  LOG_LEVEL_PLAIN = 6;
}

message LogRequest {
  LogLevel level = 1;
  string message = 2;
}

message LogResponse {}

message PromptInputRequest {
  string label = 1;
  bool is_secret = 2;
}

message PromptInputResponse {
  string value = 1;
}

message PromptConfirmRequest {
  string label = 1;
}

message PromptConfirmResponse {
  bool confirmed = 1;
}
